music shop landing page

--- a/index.html
+++ b/index.html
@@ -176,6 +176,48 @@
             </div>
         </div>
 
+        <div class="contacts">
+            <div id="about">
+               <h1>WAVES</h1>
+               <h4>Buy Guitars online budget friendly, well built quality, season 
+                   tonal wood. Acoustic Guitars at the lowest price guaranteed with great deals. </h4>
+            </div>
+            <div id="categories">
+                <h2>CATEGORIES</h2>
+                <hr>
+                <h4>Acoustic Guitars</h4>
+                <h4>Electric Guitars</h4>
+                </div>
+            <div id="navigation">
+                <h2>NAVIGATION</h2>
+                <hr>
+               <h4>Home</h4>
+               <h4>Sign In</h4>
+               <h4>Sign Up</h4>
+               <h4>Terms and Conditions</h4>
+               <h4>FAQ</h4>
+               <h4>Help</h4>
+            </div>
+            <div id="country">
+                <div id="country-div">
+                    <h3>COUNTRY</h3>
+                    <button>INDIA</button>
+                </div>
+                <div id="country-div">
+                    <h3>LANGUAGE</h3>
+                    <button>ENGLISH</button>
+                </div>
+                <div id="country-div">
+                    <h3>CURRENCY</h3>
+                    <button>INR</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <h4>Copyright &copy; 2022</h4>
+        </div>
+
     </div>
 </body>
 
